**IWatch** responseNoInterface -> confirm btn

--- a/Project WatchKit App/Base.lproj/Interface.storyboard
+++ b/Project WatchKit App/Base.lproj/Interface.storyboard
@@ -92,6 +92,7 @@
                         </group>
                     </items>
                     <connections>
+                        <outlet property="confirmBtn" destination="c1E-Xy-HFB" id="olE-qF-PmF"/>
                         <outlet property="interfacePicker" destination="Zh9-Be-5pD" id="grj-tM-H2t"/>
                     </connections>
                 </controller>
